force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/agf__ADM_Solution_Overview__c.object-meta.xml
<CustomObject>
    <description>A Solution Overview is a presentation created for a release to provide an overview of a designated set of features. This object tracks the location, status, and user story &amp; branding cross references for all solution overviews.</description>
    <label>Solution Overview</label>
    <nameField>
        <label>Solution Overview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Overviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>