force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Big_Marketing_Push__c.field-meta.xml
<CustomField>
    <fullName>agf__Big_Marketing_Push__c</fullName>
    <defaultValue>false</defaultValue>
    <description>These Solution Overviews are planned for empahsis in release and launch Marketing efforts</description>
    <label>Big Marketing Push</label>
    <type>Checkbox</type>
</CustomField>