force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Customer_communication_required__c.field-meta.xml
<CustomField>
    <fullName>agf__Customer_communication_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field if this feature or product enhancement will require proactive communication from Salesforce.com to customer System Administrators informing them of a behavior change or action they need to take.</inlineHelpText>
    <label>Customer communication required</label>
    <type>Checkbox</type>
</CustomField>