force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Description__c</fullName>
    <inlineHelpText>Enter specific details of your features or feature enhancements which are customer impacting.</inlineHelpText>
    <label>Description</label>
    <length>3200</length>
    <type>LongTextArea</type>
</CustomField>