force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Editions__c.field-meta.xml
<CustomField>
    <fullName>agf__Editions__c</fullName>
    <inlineHelpText>Which editions will your feature be enabled for?  Select all that apply.</inlineHelpText>
    <label>Editions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Edition</fullName>
            </value>
            <value>
                <fullName>Group Edition</fullName>
            </value>
            <value>
                <fullName>Professional Edition</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Unlimited Edition</fullName>
            </value>
            <value>
                <fullName>Developer Edition</fullName>
            </value>
            <value>
                <fullName>database.com</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>