force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Enter_Idea_Exchange_URL__c.field-meta.xml
<CustomField>
    <fullName>agf__Enter_Idea_Exchange_URL__c</fullName>
    <inlineHelpText>If feature is associated to an Idea(s) on the Idea Exchange - enter URL(s) here and update the Ideas  themselves with comments &amp; status changes.</inlineHelpText>
    <label>Enter Idea Exchange URL(s)</label>
    <type>TextArea</type>
</CustomField>