force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Exception_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Exception_Date__c</fullName>
    <label>Exception Date</label>
    <type>Date</type>
</CustomField>