force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Exec_Approval_Receved_WRoR__c.field-meta.xml
<CustomField>
    <fullName>agf__Exec_Approval_Receved_WRoR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Off Cycle releases resulting in features being enabled outside of 24hrs of the release require Executive approval.
This approval is requested during the Weekly Review of Releases (WRoR) Meeting</inlineHelpText>
    <label>Exec Approval Received @ WRoR</label>
    <type>Checkbox</type>
</CustomField>