force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Explain_if_no_customer_comm_required__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_if_no_customer_comm_required__c</fullName>
    <inlineHelpText>Provide explicit details why no customer communication is required</inlineHelpText>
    <label>Explain if &quot;NO&quot; Customer Comm Required</label>
    <type>TextArea</type>
</CustomField>