force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Explain_License_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Explain_License_Type__c</fullName>
    <inlineHelpText>If feature requires additional license, please list license requirements, pricing here.</inlineHelpText>
    <label>If  &quot;YES&quot; - Explain License Type</label>
    <type>TextArea</type>
</CustomField>