force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Feature_Enablement__c.field-meta.xml
<CustomField>
    <fullName>agf__Feature_Enablement__c</fullName>
    <inlineHelpText>Identify how this feature will be enabled for customers.  Note: Customers on the &quot;Do Not Auto Enable Features&quot; list will never have features automatically turned on unless they request it.</inlineHelpText>
    <label>Feature Availability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enabled for organization and end users -- Respects DNAE</fullName>
            </value>
            <value>
                <fullName>Enabled for organization and end users -- Does not respect DNAE</fullName>
            </value>
            <value>
                <fullName>Enabled for organization -- Requires system admin configuration</fullName>
            </value>
            <value>
                <fullName>Not auto enabled -- BT perm must be enabled by Customer Support or PM</fullName>
            </value>
            <value>
                <fullName>Multiple features embedded in SO - See SO for enablement information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>