force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Feature_Requires_Licence__c.field-meta.xml
<CustomField>
    <fullName>agf__Feature_Requires_Licence__c</fullName>
    <inlineHelpText>Please indicate if feature requires additional license.</inlineHelpText>
    <label>Feature Requires License</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>