force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__If_Other_Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>agf__If_Other_Please_Explain__c</fullName>
    <inlineHelpText>If you chose &apos;OTHER&apos; for your feature enablement timing, please provide specific details here.</inlineHelpText>
    <label>If Enablement Timing=OTHER, Explain:</label>
    <type>TextArea</type>
</CustomField>