force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Internal_feature_only__c.field-meta.xml
<CustomField>
    <fullName>agf__Internal_feature_only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal feature only</label>
    <type>Checkbox</type>
</CustomField>