force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Marketing_Description__c.field-meta.xml
<CustomField>
    <fullName>agf__Marketing_Description__c</fullName>
    <inlineHelpText>Enter the Marketing description for the release preview document</inlineHelpText>
    <label>Marketing Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>