force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Marketing_Name_2__c.field-meta.xml
<CustomField>
    <fullName>agf__Marketing_Name_2__c</fullName>
    <inlineHelpText>Temporary field for William Gradin to use</inlineHelpText>
    <label>Marketing Name 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>