force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Marketing_Name__c.field-meta.xml
<CustomField>
    <fullName>agf__Marketing_Name__c</fullName>
    <inlineHelpText>Marketing Name for Release Preview document.  This field is audited.</inlineHelpText>
    <label>Marketing Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>