force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Marketing_Tag_Line__c.field-meta.xml
<CustomField>
    <fullName>agf__Marketing_Tag_Line__c</fullName>
    <inlineHelpText>Sentence fragment to briefly describe the feature.</inlineHelpText>
    <label>Marketing Tag Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>