force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Planned_Release_Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Planned_Release_Status__c</fullName>
    <inlineHelpText>What is the plan for the marketed availability of this product/feature?</inlineHelpText>
    <label>Planned Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Generally Available</fullName>
                <default>true</default>
                <label>Generally Available</label>
            </value>
            <value>
                <fullName>Limited Release</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
            <value>
                <fullName>Developer Preview</fullName>
            </value>
            <value>
                <fullName>Developer Toolkit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>