force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Product_Manager__c.field-meta.xml
<CustomField>
    <fullName>agf__Product_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feature_Set</relationshipName>
    <type>Lookup</type>
</CustomField>