force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Scheduled_Build__c.field-meta.xml
<CustomField>
    <fullName>agf__Scheduled_Build__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduled Build</label>
    <referenceTo>agf__ADM_Build__c</referenceTo>
    <relationshipLabel>Solution Overviews</relationshipLabel>
    <relationshipName>Solution_Overviews</relationshipName>
    <type>Lookup</type>
</CustomField>