force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Solution_Overview_Link__c.field-meta.xml
<CustomField>
    <fullName>agf__Solution_Overview_Link__c</fullName>
    <label>Solution Overview Link</label>
    <type>Url</type>
</CustomField>