force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__Target_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__Target_Release_Date__c</fullName>
    <inlineHelpText>If you chose &apos;Off-Cycle&apos; for your feature enablement timing, please provide the TARGET date of this enablement/release.
&apos;Off Cycle&apos; requires Exec Approval. You should have received an automated email with instructions on how to obtain this Exec Approval.</inlineHelpText>
    <label>Off Cycle Target Release Date</label>
    <type>Date</type>
</CustomField>