force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/fields/agf__WRoR_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>agf__WRoR_Approval_Date__c</fullName>
    <inlineHelpText>If you chose &quot;Off Cycle&quot;, please list the release date which the Exec Team have now approved.
You would have received this approved date from attending the Weekly Review of Releases meeting.</inlineHelpText>
    <label>Exec Approved Release Date</label>
    <type>Date</type>
</CustomField>