force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/listViews/agf__x148SolutionOverviews.listView-meta.xml
<ListView>
    <fullName>agf__x148SolutionOverviews</fullName>
    <columns>NAME</columns>
    <columns>agf__Product_Manager__c</columns>
    <columns>agf__Big_Marketing_Push__c</columns>
    <columns>agf__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>148 Solution Overviews</label>
</ListView>