force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/listViews/agf__x152SolutionOverviewsPlatform.listView-meta.xml
<ListView>
    <fullName>agf__x152SolutionOverviewsPlatform</fullName>
    <columns>NAME</columns>
    <columns>agf__Product_Manager__c</columns>
    <columns>agf__Product_Division__c</columns>
    <columns>agf__Description__c</columns>
    <columns>agf__Target_Audience__c</columns>
    <columns>agf__Include_in_Admin_Preview__c</columns>
    <columns>agf__Solution_Overview_Status__c</columns>
    <columns>agf__Solution_Overview_Link__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>agf__Product_Division__c</field>
        <operation>startsWith</operation>
        <value>Platform</value>
    </filters>
    <label>152 Solution Overviews - Platform</label>
</ListView>