force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/listViews/agf__x160SolutionOverviews.listView-meta.xml
<ListView>
    <fullName>agf__x160SolutionOverviews</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>160 Solution Overviews</label>
</ListView>