force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Solution_Overview__c/listViews/agf__X162_Solution_Overviews1.listView-meta.xml
<ListView>
    <fullName>agf__X162_Solution_Overviews1</fullName>
    <columns>NAME</columns>
    <columns>agf__Solution_Overview_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>162 Solution Overviews</label>
</ListView>